--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
             rel="stylesheet"
         />
 
@@ -305,15 +305,102 @@
                             <p class="interest__title">Interest</p>
                         </div>
                         <div class="hero__secures-funds">
-                            <img src="./assets/img/secured-icon.svg" alt="" class="secures-funds__icon">
+                            <img
+                                src="./assets/img/secured-icon.svg"
+                                alt=""
+                                class="secures-funds__icon"
+                            />
                             <div class="secures-funds__text">
                                 <p class="secures-funds__percent">$1.310</p>
-                                <p class="secures-funds__title">SECURED FUNDS</p>
+                                <p class="secures-funds__title">
+                                    SECURED FUNDS
+                                </p>
                             </div>
                         </div>
                     </div>
                 </section>
             </div>
         </header>
+
+        <main class="main">
+            <section class="how-it-works">
+                <div class="container">
+                    <div class="hiw-inner">
+                        <div class="how-it-works__media">
+                            <img
+                                src="./assets/img/hiw-img.png"
+                                alt=""
+                                class="hiw-img"
+                            />
+                            <img
+                                src="./assets/img/hiw-decor.svg"
+                                alt=""
+                                class="hiw-decor-bg"
+                            />
+                            <img
+                                src="./assets/img/hiw-card.svg"
+                                alt=""
+                                class="hiw-decor-card"
+                            />
+                            <div class="media-congrats">
+                                <img
+                                    src="./assets/img/hiw-icon.svg"
+                                    alt=""
+                                    class="media-congrats__icon"
+                                />
+                                <div class="media-congrats__text">
+                                    <p class="media-congrats__title">
+                                        Congratulations
+                                    </p>
+                                    <p class="media-congrats__desc">
+                                        Your account activated
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <section class="how-it-works__content">
+                            <p class="hiw-content__title">
+                                Digital Smart Wallet
+                            </p>
+                            <h2 class="hiw-content__heading heading-extra">
+                                How It Works
+                            </h2>
+                            <ul class="hiw-content__steps">
+                                <li class="hiw-content__step">
+                                    <h3 class="content-step__title">
+                                        1. Open a High Interest Checking account
+                                    </h3>
+                                    <p class="content-step__desc">
+                                        Fund your bank account with a minimum
+                                        balance of $100. Enroll in 3 minutes or
+                                        less!
+                                    </p>
+                                </li>
+                                <li class="hiw-content__step">
+                                    <h3 class="content-step__title">
+                                        2. 10 point-of-sale transactions each
+                                        Month that are at least $10 each.
+                                    </h3>
+                                    <p class="content-step__desc">
+                                        Be sure to use your rewards checking
+                                        account as often as possible in order to
+                                        accue APYI
+                                    </p>
+                                </li>
+                                <li class="hiw-content__step">
+                                    <h3 class="content-step__title">3. Receive up to 5.50% APY</h3>
+                                    <p class="content-step__desc">
+                                        The APY you earn will be based on your
+                                        account balance and satisfying the
+                                        transaction requirement.
+                                    </p>
+                                </li>
+                            </ul>
+                        </section>
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
